# minecraft-whitelist-validator

./: .gitignore  Cargo.toml  Dockerfile  README.md  action.yml  entrypoint.sh  renovate.json
.github/workflows/: actionlint.yml  build-image.yml  build-musl.yml  ci.yml  release.yml  renovate-validate.yml  test-action.yml
src/: main.rs  minecraft.rs  mojang.rs  test.rs
test/: yohanesu_whitelist.json
