[package]
name = "minecraft-whitelist-validator"
version = "0.3.3"
authors = ["sksat <sksat@sksat.net>"]
edition = "2018"

license = "MIT"
description = "validate Minecraft whitelist.json"
repository = "https://github.com/sksat/minecraft-whitelist-validator"
readme = "README.md"

categories = ["games"]
keywords = ["minecraft"]

[dependencies]
clap = { version = "3.2.23", features = ["env"] }
codespan-reporting = "0.11.1"
json-spanned-value = "0.2.2"
rdfmt = "0.2.1"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.90"
tokio = { version = "1.23.0", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
