[package]
name = "minecraft-whitelist-validator"
version = "0.3.3"
authors = ["sksat <sksat@sksat.net>"]
edition = "2018"

license = "MIT"
description = "validate Minecraft whitelist.json"
repository = "https://github.com/sksat/minecraft-whitelist-validator"
readme = "README.md"

categories = ["games"]
keywords = ["minecraft"]

[dependencies]
clap = { version = "4.0.0", features = ["env"] }
codespan-reporting = "0.12.0"
json-spanned-value = "0.2.2"
rdfmt = "0.3.0"
reqwest = { version = "0.12.0", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
